youfull/objects/SOQLExecutionTime__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <formula>End_Time__c  -  Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Execution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Rows__c</fullName>
        <label>No_Of_Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query_Name__c</fullName>
        <label>Query Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SOQLExecutionTime</label>
    <nameField>
        <label>SOQLExecutionTime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SQOLExcuteTimes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>